# LaMuralla-AI-Test

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/application/: ingestion.rs  mod.rs  reasoning.rs
src/domain/: models.rs  ports.rs
src/infrastructure/: mod.rs  parsing.rs
src/infrastructure/ai/: rig_client.rs
src/infrastructure/persistence/: neo4j_repo.rs
src/interface/handlers/: chat.rs  graph.rs  ingest.rs  mod.rs  reasoning.rs  ui.rs
templates/: base.html  dashboard.html  login.html
